test/scc_test/exp/semantic-errors/037.a
037.t:4:5: error: expression must have arithmetic type